--- a/vercel.json
+++ b/vercel.json
@@ -6,5 +6,15 @@
   "framework": "nextjs",
   "env": {
     "NEXT_PUBLIC_DEVELOPMENT_MODE": "true"
-  }
+  },
+  "crons": [
+    {
+      "path": "/api/cron/check-grace-periods",
+      "schedule": "0 0 * * *"
+    },
+    {
+      "path": "/api/cron/check-trial-expirations",
+      "schedule": "0 9 * * *"
+    }
+  ]
 } 
